--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,9 +51,10 @@ ul {
 	}
 }
 .main-header {
+	padding-left: 370px;
 	flex-flow: column wrap;
 	justify-content: center;
-	align-content: center;
+	align-items: flex-start;
 	height: 675px;
 	width: 100%;
 	background-image: url(/img/bg.jpg);
@@ -111,9 +112,149 @@ ul {
 			&:active {
 				transform: translate(5px, 5px);
 				box-shadow: none;
+				background-color: darken(#25221e, 3%);
 			}
 		}	
 }
 .fa-download {
 	margin-left: 5px;
+}
+.about-header {
+	flex-flow: column wrap;
+	justify-content: center;
+	// align-content: center;
+	align-items: center;
+	h2 {
+		font-weight: 400;
+		font-size: 40px;
+		color: #7b6c63;
+		text-transform: uppercase;
+		margin-top: 60px;
+	}
+	hr {
+		background-color:#7b6c63;
+		width: 4%;
+		height: 5px;
+	}
+	p {
+		font-weight: 400;
+		font-size: 18px;
+		color: #212121;
+		text-align: center;
+		margin-bottom: 63px;
+	}
+}
+.about-content-text {
+	padding-left: 365px;
+	width: 50%;
+	padding-bottom: 20px;
+}
+.skew-img {
+	width: 50%;
+	height: 100%;
+	img {
+	object-fit: fill;
+	height: 100%;}
+}
+.about-content {
+	//overflow: hidden;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	background-color: #f5f5f5;
+	p {
+		font-weight: 400;
+		font-size: 16px/30px;
+		color: #212121;
+		text-align: center;
+		margin-bottom: 63px;
+		text-align: left;
+		margin-bottom: 0;
+	}
+	h3 {
+		font-weight: 500;
+		font-size: 24px;
+		color: #7b6c63;
+		text-transform: uppercase;
+		margin-top: 60px;
+	}
+	.btn {
+		margin-top: 35px;
+		a {
+			text-decoration: none;
+			border: 1px solid black;
+			padding: 20px 27px;
+			background-color: rgba(0, 0, 0, 0);
+			color: #000;
+			}
+		}
+
+}
+.about-footer {
+	flex-flow: column wrap;
+	align-items: center;
+	justify-content: center;
+	padding:0 24%;
+	p {
+		font-weight: 400;
+		font-size: 16px/30px;
+		color: #000;
+		text-align: center;
+		margin-bottom: 0;
+	}
+	h3 {
+		font-weight: 500;
+		font-size: 24px;
+		color: #7b6c63;
+		text-transform: uppercase;
+		margin-top: 80px;
+		margin-bottom: 30px;
+		}
+}
+.column {margin-top: 90px;}
+.column-item {
+	padding-right: 30px;
+	text-align: center;
+	&:last-child {
+		padding-right: 0;
+	}
+	p {
+		font-weight: 400;
+		font-size: 16px/24px;
+		color: #949494;
+		margin-bottom: 0;
+	}
+	h4 {
+		font-weight: 400;
+		font-size: 18px/30px;
+		color: #363636;
+		text-transform: uppercase;
+		margin-bottom: 30px;
+		}
+
+}
+.icon {
+	font-size: 30px;
+}
+.skills {
+		background: black url(/img/skills.jpg) fixed center no-repeat;
+		background-size: cover;
+		color: white;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	.col {
+		.disc {
+			text-align: center;
+			.disc-item {
+				background-image: url(/img/1.png);
+				background-position: center;
+				background-size: auto;
+				background-repeat: no-repeat;
+				padding: 80px;
+
+			}
+
+		}
+	}
+
 }
