--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,7 @@ ul li {
       border-bottom: 5px solid #7b6c63; }
 
 .main-header {
+  padding-left: 370px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
@@ -75,8 +76,9 @@ ul li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   height: 675px;
   width: 100%;
   background-image: url(/img/bg.jpg);
@@ -131,7 +133,153 @@ ul li {
       -webkit-transform: translate(5px, 5px);
               transform: translate(5px, 5px);
       -webkit-box-shadow: none;
-              box-shadow: none; }
+              box-shadow: none;
+      background-color: #1d1a17; }
 
 .fa-download {
   margin-left: 5px; }
+
+.about-header {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .about-header h2 {
+    font-weight: 400;
+    font-size: 40px;
+    color: #7b6c63;
+    text-transform: uppercase;
+    margin-top: 60px; }
+  .about-header hr {
+    background-color: #7b6c63;
+    width: 4%;
+    height: 5px; }
+  .about-header p {
+    font-weight: 400;
+    font-size: 18px;
+    color: #212121;
+    text-align: center;
+    margin-bottom: 63px; }
+
+.about-content-text {
+  padding-left: 365px;
+  width: 50%;
+  padding-bottom: 20px; }
+
+.skew-img {
+  width: 50%;
+  height: 100%; }
+  .skew-img img {
+    -o-object-fit: fill;
+       object-fit: fill;
+    height: 100%; }
+
+.about-content {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #f5f5f5; }
+  .about-content p {
+    font-weight: 400;
+    font-size: 16px/30px;
+    color: #212121;
+    text-align: center;
+    margin-bottom: 63px;
+    text-align: left;
+    margin-bottom: 0; }
+  .about-content h3 {
+    font-weight: 500;
+    font-size: 24px;
+    color: #7b6c63;
+    text-transform: uppercase;
+    margin-top: 60px; }
+  .about-content .btn {
+    margin-top: 35px; }
+    .about-content .btn a {
+      text-decoration: none;
+      border: 1px solid black;
+      padding: 20px 27px;
+      background-color: rgba(0, 0, 0, 0);
+      color: #000; }
+
+.about-footer {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 24%; }
+  .about-footer p {
+    font-weight: 400;
+    font-size: 16px/30px;
+    color: #000;
+    text-align: center;
+    margin-bottom: 0; }
+  .about-footer h3 {
+    font-weight: 500;
+    font-size: 24px;
+    color: #7b6c63;
+    text-transform: uppercase;
+    margin-top: 80px;
+    margin-bottom: 30px; }
+
+.column {
+  margin-top: 90px; }
+
+.column-item {
+  padding-right: 30px;
+  text-align: center; }
+  .column-item:last-child {
+    padding-right: 0; }
+  .column-item p {
+    font-weight: 400;
+    font-size: 16px/24px;
+    color: #949494;
+    margin-bottom: 0; }
+  .column-item h4 {
+    font-weight: 400;
+    font-size: 18px/30px;
+    color: #363636;
+    text-transform: uppercase;
+    margin-bottom: 30px; }
+
+.icon {
+  font-size: 30px; }
+
+.skills {
+  background: black url(/img/skills.jpg) fixed center no-repeat;
+  background-size: cover;
+  color: white;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .skills .col .disc {
+    text-align: center; }
+    .skills .col .disc .disc-item {
+      background-image: url(/img/1.png);
+      background-position: center;
+      background-size: auto;
+      background-repeat: no-repeat;
+      padding: 80px; }
