--- a/scss/style.scss
+++ b/scss/style.scss
@@ -117,3 +117,147 @@ ul {
 .fa-download {
 	margin-left: 5px;
 }
+/*
+* at home
+*/
+.project {
+	background-color: #f5f5f5;
+
+	.project-black {
+		height: 457px;
+		flex-flow: column nowrap;
+		justify-content: space-around;
+		align-items: center;
+		color: #fff;
+		background-color: #1a1a1a;
+		a {
+			text-decoration: none;
+			color: green;
+
+		}
+		h3 {
+			margin-top: 60px;
+			font-size: 24px;
+			letter-spacing: 1.2px;
+			text-transform: uppercase;
+
+		}
+		blockquote, cite {
+			color: #7b6c63;
+			font-size: 18px/36px;
+			font-weight: 300;
+
+		}
+		.navi {
+			margin: 36px 0 70px 0;
+		}
+		.fa-circle {
+			color: #fff;
+			&:hover {
+				background-color: #fff;
+				border: 1px solid #fff;
+				border-radius: 50%;
+				box-sizing: border-box;
+			}
+		}
+
+	}
+	.project-text {
+		hr {
+			width: 77px;
+			height: 7px;
+			background-color: #7b6c63;
+			margin: 40px auto;
+		}
+		h2 {
+			font-size: 40px/47px;
+			color: #7b6c63;
+			font-weight: 500;
+			text-align: center;
+			margin: 90px auto;
+			margin-bottom: 40px;
+		}
+		p {
+			font-size: 18px;
+			color: #212121;
+			margin: 0 auto;
+			text-align: center;
+			padding-bottom: 90px;
+		}
+	}
+	.project-foto {
+		justify-content: center;
+		.project-foto-item {
+
+			margin: 15px;
+			&:hover {
+				.text {
+					border: 3px solid black;
+				}
+				.img {
+					border: 3px solid black;
+					a {visibility: visible;}
+				
+					&::before {
+					background-color: rgba(0,0,0,0.9);
+					}
+				}
+			}
+			.img {
+				box-sizing: border-box;
+				width: 360px;
+				height: 370px;
+				position: relative; 
+				background: #000 url(/img/man.png) no-repeat center;
+				background-size: cover;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				&::before {
+					top:0;
+					bottom: 0;
+					left: 0;
+					right: 0;
+					content: '';
+					position: absolute;
+					z-index: 2;
+					background-color: rgba(0,0,0,0);
+					transition: background-color 1s ease-out;
+				}
+				a {
+					
+					z-index: 3;
+					padding: 5px;
+					visibility: hidden;
+					.fab {
+						color: white;
+						font-size: 24px;
+						border: 2px solid white;
+						border-radius: 50%;
+						padding: 15px;
+
+								}
+				}
+
+			}
+			.text {
+				border: 3px solid #e4e4e4;
+				text-transform: uppercase;
+				width: 360px;
+				margin: 30px 0 80px 0;
+				text-align: center;
+				transition: border 1s ease-out;
+				h4{
+					font-size: 24px;
+					color: #000;
+					margin-bottom: 18px;
+				}
+				p {
+					font-size: 14px;
+					color: #000;
+					letter-spacing: 1.4px
+				}
+			}
+		}
+	}
+}
