--- a/style/style.css
+++ b/style/style.css
@@ -135,3 +135,130 @@ ul li {
 
 .fa-download {
   margin-left: 5px; }
+
+/*
+* at home
+*/
+.project {
+  background-color: #f5f5f5; }
+  .project .project-black {
+    height: 457px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #fff;
+    background-color: #1a1a1a; }
+    .project .project-black a {
+      text-decoration: none;
+      color: green; }
+    .project .project-black h3 {
+      margin-top: 60px;
+      font-size: 24px;
+      letter-spacing: 1.2px;
+      text-transform: uppercase; }
+    .project .project-black blockquote, .project .project-black cite {
+      color: #7b6c63;
+      font-size: 18px/36px;
+      font-weight: 300; }
+    .project .project-black .navi {
+      margin: 36px 0 70px 0; }
+    .project .project-black .fa-circle {
+      color: #fff; }
+      .project .project-black .fa-circle:hover {
+        background-color: #fff;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; }
+  .project .project-text hr {
+    width: 77px;
+    height: 7px;
+    background-color: #7b6c63;
+    margin: 40px auto; }
+  .project .project-text h2 {
+    font-size: 40px/47px;
+    color: #7b6c63;
+    font-weight: 500;
+    text-align: center;
+    margin: 90px auto;
+    margin-bottom: 40px; }
+  .project .project-text p {
+    font-size: 18px;
+    color: #212121;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 90px; }
+  .project .project-foto {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .project .project-foto .project-foto-item {
+      margin: 15px; }
+      .project .project-foto .project-foto-item:hover .text {
+        border: 3px solid black; }
+      .project .project-foto .project-foto-item:hover .img {
+        border: 3px solid black; }
+        .project .project-foto .project-foto-item:hover .img a {
+          visibility: visible; }
+        .project .project-foto .project-foto-item:hover .img::before {
+          background-color: rgba(0, 0, 0, 0.9); }
+      .project .project-foto .project-foto-item .img {
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        width: 360px;
+        height: 370px;
+        position: relative;
+        background: #000 url(/img/man.png) no-repeat center;
+        background-size: cover;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .project .project-foto .project-foto-item .img::before {
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          content: '';
+          position: absolute;
+          z-index: 2;
+          background-color: rgba(0, 0, 0, 0);
+          -webkit-transition: background-color 1s ease-out;
+          transition: background-color 1s ease-out; }
+        .project .project-foto .project-foto-item .img a {
+          z-index: 3;
+          padding: 5px;
+          visibility: hidden; }
+          .project .project-foto .project-foto-item .img a .fab {
+            color: white;
+            font-size: 24px;
+            border: 2px solid white;
+            border-radius: 50%;
+            padding: 15px; }
+      .project .project-foto .project-foto-item .text {
+        border: 3px solid #e4e4e4;
+        text-transform: uppercase;
+        width: 360px;
+        margin: 30px 0 80px 0;
+        text-align: center;
+        -webkit-transition: border 1s ease-out;
+        transition: border 1s ease-out; }
+        .project .project-foto .project-foto-item .text h4 {
+          font-size: 24px;
+          color: #000;
+          margin-bottom: 18px; }
+        .project .project-foto .project-foto-item .text p {
+          font-size: 14px;
+          color: #000;
+          letter-spacing: 1.4px; }
