--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "vars";
 @import "fonts";
+@import "media";
 
 body {
 	font-size: 16px;
@@ -463,12 +464,12 @@ ul {
 			}
 			.img {
 				box-sizing: border-box;
-				width: 360px;
+				width: 270px;
 				height: 370px;
 				position: relative; 
 				background: #000 url(/img/man.png) no-repeat center;
 				background-size: cover;
-				display: flex;
+				
 				justify-content: center;
 				align-items: center;
 				&::before {
@@ -501,7 +502,7 @@ ul {
 			.text {
 				border: 3px solid #e4e4e4;
 				text-transform: uppercase;
-				width: 360px;
+				width: 270px;
 				margin: 30px 0 80px 0;
 				text-align: center;
 				transition: border 1s ease-out;
@@ -521,13 +522,16 @@ ul {
 }
 .blog {
 	.blog-content {
-		padding:0 444px;
+		padding:0;
 		flex-flow: row nowrap;
-		justify-content: center;
+		justify-content: space-between;
 	}
 	.blog-content-column {
 		flex-flow: column nowrap;
 		text-align: right;
+		img {
+			width: 100%;
+		}
 		time {
 			color: #7b6c63;
 			font-size: 16px;
@@ -589,7 +593,7 @@ ul {
 		}
 		button {
 			grid-column:2/4;
-			margin: 30px 360px 80px 360px;
+			margin: 30px 200px 80px 200px;
 			padding: 15px;
 			color: #000;
 			font-weight: bold;
