--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@
     height: 100%; }
   body .skills .col .disc .disc-item {
     background-size: contain;
-    padding: 35px; }
+    padding: 30px; }
   body footer .main-footer {
     padding-bottom: 0; }
     body footer .main-footer .text {
@@ -112,22 +112,24 @@
     body .main-header h1 {
       font-size: 1em; }
   body .project .project-foto .project-foto-item {
-    margin: 9px; }
+    margin: 5px; }
     body .project .project-foto .project-foto-item .img {
-      height: 200px; }
+      height: 150px; }
     body .project .project-foto .project-foto-item .text h4 {
       margin-top: 5px;
-      font-size: 18px;
+      font-size: 16px;
       margin-bottom: 5px; }
     body .project .project-foto .project-foto-item .text p {
       font-size: 12px; }
     body .project .project-foto .project-foto-item .img, body .project .project-foto .project-foto-item .text {
-      width: 130px; }
+      width: 120px; }
   body .gallery .gallery-item .itemall {
     height: 100%; }
   body .skills .col .disc .disc-item {
     background-size: contain;
-    padding: 35px; }
+    padding: 22px; }
+  .skills p {
+    font-size: 14px; }
   body footer .main-footer {
     padding-bottom: 0; }
     body footer .main-footer .text {
