--- a/starterpack/scss/style.scss
+++ b/starterpack/scss/style.scss
@@ -1,6 +1,5 @@
 @import "vars";
 @import "fonts";
-@import "normalize";
 
 body {
 	font-size: 16px;
@@ -11,4 +10,6 @@ body {
 	overflow-x: hidden;
 	color: $text;
 }
- 
+
+ /* in the end*/
+ @import "media";
